<resources>
    <string name="app_name">PayE</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_account">Don\'t have account\nCreate one <u>here</u></string>
    <string name="email">email</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">confirm password</string>
    <string name="full_name">full name</string>
    <string name="authenticate">AUTHENTICATE</string>
    <string name="confirm">CONFIRM</string>
    <string name="resend_otp">RESEND THE OTP</string>
    <string name="forget_password_title">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="scan">Scan</string>
    <string name="setting">Setting</string>
</resources>